--- a/dwba4-semana-01/index.html
+++ b/dwba4-semana-01/index.html
@@ -4,13 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Desenvolvimento web: Cliente (PTBDWBC)</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
+  <h1>Atividade da Semana 01</h1>
+  <p>Aluno: Gabriel Lucena</p>
+  <p>Prontuário: PT3025616</p>
   <script src="script.js"></script>
+
 </body>
 
 </html>
