feat: :sparkles: Inserção do vídeo e cabeçalho

--- a/dwba4-semana-02/index.html
+++ b/dwba4-semana-02/index.html
@@ -11,6 +11,16 @@
     <title>HOME - IFSP - Pirituba - DWBA4</title>
   </head>
   <body>
+    <div style="position: absolute; top: 0; right: 0">
+      <table>
+        <tr>
+          <td style="border-right: 1px solid black"><a href="">HOME</a></td>
+          <td><a href="">CONTATO</a></td>
+          <td style="border-left: 1px solid black"><a href="">SOBRE</a></td>
+        </tr>
+      </table>
+    </div>
+
     <img src="./images/Logo.jpg" alt="" />
 
     <h1>Eventos</h1>
@@ -31,20 +41,24 @@
     <!-- Tutorial de Acesso - SUAP 1 -->
 
     <div>
-      <video width="400" controls>
-        <source
-          src="https://www.youtube.com/watch?v=yVbOcB1ryh0"
-          type="video/mp4"
-        />
-        Seu browser não suporta a tag vídeo.
-      </video>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/yVbOcB1ryh0?si=mymu9rQbXLBAeLh4"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
 
     <p>
-      <img src="./images/MoveTop.png" alt="" /><img
-        src="./images/facebook.png"
-        alt=""
-      />
+      <span>
+        <img src="./images/MoveTop.png" alt="" />
+      </span>
+      <span>
+        <img src="./images/facebook.png" alt="" />
+      </span>
     </p>
 
     <p>
