--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="shortcut icon"
-      href="./images/imafavicon.ico"
+      href="./images/favicon.ico"
       type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
