feat: :sparkles: Imagens

--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -8,10 +8,10 @@
       type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME - IFSP - Pirituba - DWBA4</title>
+    <title>Página inicial</title>
   </head>
   <body>
-    <div style="position: absolute; top: 0; right: 0">
+    <div style="position: absolute; top: 0; right: 0" id="header">
       <table>
         <tr>
           <td style="border-right: 1px solid black"><a href="">HOME</a></td>
@@ -25,7 +25,7 @@
 
     <h1>Eventos</h1>
 
-    <img src="./images/SEJA_RARO.jpg" alt="" />
+    <img src="./images/SEJA_RARO.jpg" alt="Imagem de publidade da palestra: "Seja raro"" width="500" />
 
     <p>Aniversário do IFSP - Pirituba - Palestra Augusto Alelo</p>
 
@@ -37,8 +37,6 @@
     <p><strong>Publicado: Quarta-feira, 14 de agosto de 2019</strong></p>
 
     <h1>Conheça o SUAP</h1>
-
-    <!-- Tutorial de Acesso - SUAP 1 -->
 
     <div>
       <iframe
@@ -54,10 +52,15 @@
 
     <p>
       <span>
-        <img src="./images/MoveTop.png" alt="" />
+      <a href="#header">
+        <img src="./images/MoveTop.png" alt="Seta apontando para cima" width="50" height="50" />
+      </a>
       </span>
+      
       <span>
-        <img src="./images/facebook.png" alt="" />
+        <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
+          <img src="./images/facebook.png" alt="Logotipo do Facebook" width="50" height="50" />
+        </a>
       </span>
     </p>
 
