style: :speech_balloon: Nomes e cabeçalho

--- a/dwba4-semana-03-PT3025616/index.html
+++ b/dwba4-semana-03-PT3025616/index.html
@@ -2,30 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="shortcut icon"
-      href="./images/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página inicial</title>
   </head>
   <body>
-    <div style="position: absolute; top: 0; right: 0" id="header">
-      <table>
-        <tr>
-          <td style="border-right: 1px solid black"><a href="">HOME</a></td>
-          <td><a href="">CONTATO</a></td>
-          <td style="border-left: 1px solid black"><a href="">SOBRE</a></td>
-        </tr>
-      </table>
-    </div>
-
     <img src="./images/Logo.jpg" alt="" />
 
     <h1>Eventos</h1>
 
-    <img src="./images/SEJA_RARO.jpg" alt="Imagem de publidade da palestra: "Seja raro"" width="500" />
+    <img src="./images/SEJA_RARO.jpg" alt="Imagem de publidade da palestra:
+    "Seja raro"" width="500" />
 
     <p>Aniversário do IFSP - Pirituba - Palestra Augusto Alelo</p>
 
@@ -52,14 +39,24 @@
 
     <p>
       <span>
-      <a href="#header">
-        <img src="./images/MoveTop.png" alt="Seta apontando para cima" width="50" height="50" />
-      </a>
+        <a href="#header">
+          <img
+            src="./images/MoveTop.png"
+            alt="Seta apontando para cima"
+            width="50"
+            height="50"
+          />
+        </a>
       </span>
-      
+
       <span>
         <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-          <img src="./images/facebook.png" alt="Logotipo do Facebook" width="50" height="50" />
+          <img
+            src="./images/facebook.png"
+            alt="Logotipo do Facebook"
+            width="50"
+            height="50"
+          />
         </a>
       </span>
     </p>
