--- a/dwba4-semana-04-PT3025616/index.html
+++ b/dwba4-semana-04-PT3025616/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página inicial</title>
     <link rel="stylesheet" href="./style.css" type="text/css">
-    <link rel="stylesheet" href="./images/favicon_ifsp.ico">
+    <link rel="shortcut icon" href="./images/favicon_ifsp.ico" type="image/x-icon" />
   </head>
   <body>
 
