style: :lipstick: Indentação

--- a/dwba4-semana-05-PT3025616/index.html
+++ b/dwba4-semana-05-PT3025616/index.html
@@ -7,52 +7,54 @@
     <link rel="stylesheet" href="./style.css" type="text/css" />
     <link
       rel="shortcut icon"
-      href="./images/favicon_ifsp.ico"
+      href="./src/images/favicon_ifsp.ico"
       type="image/x-icon"
     />
   </head>
   <body>
     <div id="header" style="position: absolute; top: 0; right: 0">
       <p>
-        <a href="./index.html">HOME</a> |
-        <a href="./pages/eventos.html">EVENTOS</a> |
-        <a href="./pages/contato.html">CONTANTO</a> |
-        <a href="./pages/sobre.html">SOBRE</a> |
-        <a href="./pages/entrar.html">ENTRAR</a>
+        <a href="./src/index.html">HOME</a> |
+        <a href="./src/pages/eventos.html">EVENTOS</a> |
+        <a href="./src/pages/contato.html">CONTANTO</a> |
+        <a href="./src/pages/sobre.html">SOBRE</a> |
+        <a href="./src/pages/entrar.html">ENTRAR</a>
       </p>
     </div>
 
-    <img src="./images/IFSP_logo.jpg" />
+    <img src="./src/images/IFSP_logo.jpg" />
     <div id="Cursos">
       <h3>Cursos</h3>
       <ul>
         <li>
-          <a href="./pages/courses/ads.html"
+          <a href="./src/pages/courses/ads.html"
             >Análise e Desenvolvimento de Sistemas</a
           >
         </li>
         <li>
-          <a href="./pages/courses/engProd.html">Engenharia de Produção</a>
+          <a href="./src/pages/courses/engProd.html">Engenharia de Produção</a>
         </li>
         <li>
-          <a href="./pages/courses/gestTI.html"
+          <a href="./src/pages/courses/gestTI.html"
             >Gestão em Tecnologia da Informação</a
           >
         </li>
-        <li><a href="./pages/courses/letras.html">Letras</a></li>
-        <li><a href="./pages/courses/gestPublica.html">Gestão Pública</a></li>
+        <li><a href="./src/pages/courses/letras.html">Letras</a></li>
+        <li>
+          <a href="./src/pages/courses/gestPublica.html">Gestão Pública</a>
+        </li>
       </ul>
     </div>
 
     <div id="Eventos">
       <h3>Eventos</h3>
-      <img src="./images/Seja_Raro.jpg" width="500" />
+      <img src="./src/images/Seja_Raro.jpg" width="500" />
       <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
     </div>
 
     <div id="Biblioteca">
       <h1>Sobre a Biblioteca</h1>
-      <img src="./images/Library.jpeg" />
+      <img src="./src/images/Library.jpeg" />
       <h1>Conheça os novos títulos disponíveis na nossa biblioteca</h1>
       <h6>Publicado: Quarta-feira, 14 de agosto de 2019</h6>
     </div>
@@ -71,13 +73,13 @@
     </div>
 
     <a href="#header">
-      <img src="./images/MoveTop.png" width="50" height="50" />
+      <img src="./src/images/MoveTop.png" width="50" height="50" />
     </a>
 
     <br />
 
     <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-      <img src="./images/Facebook.png" width="50" height="50" />
+      <img src="./src/images/Facebook.png" width="50" height="50" />
     </a>
 
     <div id="footer">
