--- a/dwba4-semana-05-PT3025616/src/pages/contato.html
+++ b/dwba4-semana-05-PT3025616/src/pages/contato.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Contato</title>
+    <link rel="icon" href="../images/favicon_ifsp.ico" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Contato</title>
-  <link rel="icon" href="../images/favicon_ifsp.ico" />
-</head>
-
-<body>
-
-  <div id="header" style="position: absolute; top: 0; right: 0;">
-    <p><a href="../index.html">HOME</a> | <a href="contato.html">CONTATO</a> | <a href="sobre.html">SOBRE</a></p>
-  </div>
-</body>
-
+  <body>
+    <object data="./header_pages.html" type="text/html" width="100%"></object>
+  </body>
 </html>
