--- a/dwba4-semana-05-PT3025616/src/pages/sobre.html
+++ b/dwba4-semana-05-PT3025616/src/pages/sobre.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Sobre</title>
+    <link rel="icon" href="../images/favicon_ifsp.ico" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Sobre</title>
-  <link rel="icon" href="../images/favicon_ifsp.ico" />
-</head>
-
-<body>
-
-</body>
-
+  <body>
+    <object data="./header_pages.html" type="text/html" width="100%"></object>
+  </body>
 </html>
