feat: :sparkles: Novas imagens, página de eventos e cabeçalho

--- a/dwba4-semana-05-PT3025616/index.html
+++ b/dwba4-semana-05-PT3025616/index.html
@@ -14,9 +14,9 @@
   <body>
     <div id="header" style="position: absolute; top: 0; right: 0">
       <p>
-        <a href="./src/index.html">HOME</a> |
+        <a href="./index.html">HOME</a> |
         <a href="./src/pages/eventos.html">EVENTOS</a> |
-        <a href="./src/pages/contato.html">CONTANTO</a> |
+        <a href="./src/pages/contato.html">CONTATO</a> |
         <a href="./src/pages/sobre.html">SOBRE</a> |
         <a href="./src/pages/entrar.html">ENTRAR</a>
       </p>
@@ -79,14 +79,14 @@
     <br />
 
     <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-      <img src="./src/images/Facebook.png" width="50" height="50" />
+      <img src="./src/images/facebook.png" width="50" height="50" />
     </a>
 
-    <div id="footer">
+    <footer>
       <p>
         IFSP - Campus Pirutuba - Av. Mutinga, 951 - Jardim Santo Elias - CEP:
         05110-000 - São Paulo/SP - Contato: (011) 2504-0100
       </p>
-    </div>
+    </footer>
   </body>
 </html>
