--- a/dwba4-semana-05-PT3025616/src/pages/courses/ads.html
+++ b/dwba4-semana-05-PT3025616/src/pages/courses/ads.html
@@ -9,7 +9,17 @@
   </head>
 
   <body>
-    <object data="./header_pages.html" type="text/html" width="100%"></object>
+    <header>
+      <div id="Topo" style="position: absolute; top: 0; right: 0">
+        <p>
+          <a href="../../../../index.html">HOME</a> |
+          <a href="../eventos.html">EVENTOS</a> |
+          <a href="../contato.html">CONTATO</a> |
+          <a href="../sobre.html">SOBRE</a> |
+          <a href="../entrar.html">ENTRAR</a>
+        </p>
+      </div>
+    </header>
 
     <h4>Tecnologia em Análise e Desenvolvimento de Sistemas</h4>
     <p>
