--- a/dwba4-semana-05-PT3025616/src/pages/entrar.html
+++ b/dwba4-semana-05-PT3025616/src/pages/entrar.html
@@ -7,6 +7,18 @@
     <link rel="icon" href="../images/favicon_ifsp.ico" />
   </head>
   <body>
-    <object data="./header_pages.html" type="text/html" width="100%"></object>
+    <header>
+      <div id="Topo" style="position: absolute; top: 0; right: 0">
+        <p>
+          <a href="../../index.html">HOME</a> |
+          <a href="./eventos.html">EVENTOS</a> |
+          <a href="./contato.html">CONTATO</a> |
+          <a href="./sobre.html">SOBRE</a> |
+          <a href="./entrar.html">ENTRAR</a>
+        </p>
+      </div>
+    </header>
+
+    página de entrar
   </body>
 </html>
