--- a/dwba4-semana-05-PT3025616/src/pages/eventos/eventos.html
+++ b/dwba4-semana-05-PT3025616/src/pages/eventos/eventos.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventos</title>
-    <link rel="icon" href="../images/favicon_ifsp.ico" />
+    <link rel="icon" href="../../images/favicon_ifsp.ico" />
   </head>
   <body>
     <header>
       <div id="Topo" style="position: absolute; top: 0; right: 0">
         <p>
-          <a href="../../index.html">HOME</a> |
+          <a href="../../../index.html">HOME</a> |
           <a href="./eventos.html">EVENTOS</a> |
-          <a href="./contato.html">CONTATO</a> |
-          <a href="./sobre.html">SOBRE</a> |
-          <a href="./entrar.html">ENTRAR</a>
+          <a href="../contato.html">CONTATO</a> |
+          <a href="../sobre.html">SOBRE</a> |
+          <a href="../entrar.html">ENTRAR</a>
         </p>
       </div>
     </header>
 
     <h1>Inscreva-se</h1>
 
-    <form action="" method="post">
+    <form action="./evento.php" method="post" id="formulario_eventos">
       <fieldset>
         <label for="evento">Evento</label>
         <select name="estado">
@@ -34,12 +34,15 @@
 
       <fieldset>
         <legend>Informações de Acesso</legend>
+        <br />
 
         <label for="usuario">Usuário</label>
         <input type="text" name="usuario" id="usuario" required /> <br />
+        <br />
 
         <label for="senha">Senha</label>
         <input type="password" name="senha" id="senha" required /> <br />
+        <br />
 
         <label for="confirmar_senha">Confirme a senha</label>
         <input
@@ -48,6 +51,7 @@
           id="confirmar_senha"
           required
         />
+        <br /><br />
       </fieldset>
 
       <fieldset>
@@ -55,13 +59,15 @@
 
         <label for="nome">Nome completo</label>
         <input type="text" name="nome" id="nome" /> <br />
+        <br />
 
         <label for="email">E-mail</label>
         <input type="text" name="email" id="email" /> <br />
+        <br />
 
         <label for="celular">Celular</label>
-        <input type="text" name="celular" id="celular" />
-        (99) 99999-9999
+        <input type="text" name="celular" id="celular" /> (99) 99999-9999
+        <br />
         <br />
 
         <fieldset>
@@ -78,26 +84,32 @@
           <label for="feminino">Feminino</label>
           <input type="radio" name="sexo_feminino" id="feminino" />
         </fieldset>
+        <br />
 
         <label for="data_nascimento">Data de Nascimento</label>
         <input type="date" name="data_nascimento" id="data_nascimento" /> <br />
+        <br />
 
         <label for="cor_favorita">Cor Favorita</label>
         <input type="color" name="cor_favorita" id="cor_favorita" /> <br />
+        <br />
 
         <label for="perfil_github">Perfil no Github</label>
         <input type="url" name="perfil_github" id="perfil_github" />
+
+        <br /><br />
       </fieldset>
 
-      <input type="submit" value="Submit" />
-    </form>
+      <br />
 
-    <!-- link do facebook com foto + endereço da escola -->
+      <input type="submit" value="Inscrever" />
+      <button type="button" onclick="limparFormulario()">Limpar</button>
+    </form>
 
     <br />
 
     <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-      <img src="../images/facebook.png" width="50" height="50" />
+      <img src="../../images/facebook.png" width="50" height="50" />
     </a>
 
     <footer>
@@ -106,5 +118,7 @@
         05110-000 - São Paulo/SP - Contato: (011) 2504-0100
       </p>
     </footer>
+
+    <script src="eventos.js" defer></script>
   </body>
 </html>
