--- a/dwba4-semana-05-PT3025616/src/pages/eventos/eventos.html
+++ b/dwba4-semana-05-PT3025616/src/pages/eventos/eventos.html
@@ -19,9 +19,13 @@
       </div>
     </header>
 
+    <br /><br />
+
+    <img src="../../images/IFSP_logo.jpg" alt="Logo do IFSP" />
+
     <h1>Inscreva-se</h1>
 
-    <form action="./evento.php" method="post" id="formulario_eventos">
+    <form id="formulario_eventos">
       <fieldset>
         <label for="evento">Evento</label>
         <select name="estado">
@@ -66,7 +70,13 @@
         <br />
 
         <label for="celular">Celular</label>
-        <input type="text" name="celular" id="celular" /> (99) 99999-9999
+        <input
+          type="text"
+          name="celular"
+          id="celular"
+          pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"
+        />
+        (99) 99999-9999
         <br />
         <br />
 
@@ -74,15 +84,10 @@
           <legend>Sexo</legend>
 
           <label for="masculino">Masculino</label>
-          <input
-            type="radio"
-            name="sexo_masculino"
-            id="masculino"
-            value="masculino"
-          />
+          <input type="radio" name="sexo" id="masculino" value="masculino" />
 
           <label for="feminino">Feminino</label>
-          <input type="radio" name="sexo_feminino" id="feminino" />
+          <input type="radio" name="sexo" id="feminino" value="feminino" />
         </fieldset>
         <br />
 
