--- a/dwba4-semana-05-PT3025616/src/pages/contato.html
+++ b/dwba4-semana-05-PT3025616/src/pages/contato.html
@@ -19,5 +19,81 @@
         </p>
       </div>
     </header>
+
+    <br /><br />
+
+    <img src="../images/IFSP_logo.jpg" alt="Logotipo do IFSP" />
+
+    <h1>Mande uma mensagem</h1>
+
+    <form>
+      <ul>
+        <li>
+          <label for="nome">Nome</label>
+          <input type="text" name="nome" id="nome" required/>
+        </li>
+
+        <li>
+          <label for="email">E-Mail</label>
+          <input type="text" name="email" id="email" />
+        </li>
+
+        <li>
+          <label for="telefone">Telefone</label>
+          <input type="tetx" name="telefone" id="telefone"
+          pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"
+          required/>
+          (99) 99999-9999
+        </li>
+
+        <li>
+          <label for="assunto">Assunto</label>
+          <select name="assunto">
+            <option value="selecione">-- Selecione --</option>
+            <option value="reclamacao">Reclamação</option>
+            <option value="sugestao">Sugestão</option>
+          </select required>
+        </li>
+
+        <li>
+          <label for="mensagem">Mensagem</label>
+          <textarea name="mensagem" id="mensagem" cols="15" rows="3"></textarea>
+        </li>
+
+        <li>
+          <fieldset>
+            <legend>Opções de Resposta</legend>
+            <label for="email">E-Mail</label>
+            <input
+              type="checkbox"
+              name="email"
+              id="email"
+              value="email"
+            />
+
+            <label for="telefone">Telefone</label>
+            <input type="checkbox" name="telefone" id="telefone" value="telefone"/>
+          </fieldset>
+        </li>
+
+        <li>
+          <input type="submit" value="Enviar" />
+        </li>
+      </ul>
+    </form>
+
+    <br />
+    <br />
+
+    <footer>
+      <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
+        <img src="../images/facebook.png" width="50" height="50" />
+      </a>
+
+      <p>
+        IFSP - Campus Pirutuba - Av. Mutinga, 951 - Jardim Santo Elias - CEP:
+        05110-000 - São Paulo/SP - Contato: (011) 2504-0100
+      </p>
+    </footer>
   </body>
 </html>
