--- a/dwba4-semana-05-PT3025616/src/pages/sobre.html
+++ b/dwba4-semana-05-PT3025616/src/pages/sobre.html
@@ -20,6 +20,21 @@
       </div>
     </header>
 
-    página de sobre
+    <img src="../images/IFSP_logo.jpg" alt="Logotipo do IFSP" />
+
+    <h1>Sobre</h1>
+
+    <br /><br /><br />
+
+    <footer>
+      <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
+        <img src="../images/facebook.png" width="50" height="50" />
+      </a>
+
+      <p>
+        IFSP - Campus Pirutuba - Av. Mutinga, 951 - Jardim Santo Elias - CEP:
+        05110-000 - São Paulo/SP - Contato: (011) 2504-0100
+      </p>
+    </footer>
   </body>
 </html>
