feat: :sparkles: Página de entrar completa

--- a/dwba4-semana-05-PT3025616/src/pages/entrar.html
+++ b/dwba4-semana-05-PT3025616/src/pages/entrar.html
@@ -19,6 +19,41 @@
       </div>
     </header>
 
-    página de entrar
+    <br /><br />
+
+    <img src="../images/IFSP_logo.jpg" alt="Logotipo do IFSP" />
+
+    <h1>Entrar</h1>
+
+    <form>
+      <label for="usuario">Usuário</label>
+      <input type="text" id="usuario" required />
+
+      <br />
+      <br />
+
+      <label for="senha">Senha</label>
+      <input type="text" id="senha" required />
+
+      <br />
+      <br />
+
+      <input type="submit" value="Entrar" />
+      <a href="">Esqueci a senha</a>
+    </form>
+
+    <br />
+    <br />
+
+    <footer>
+      <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
+        <img src="../images/facebook.png" width="50" height="50" />
+      </a>
+
+      <p>
+        IFSP - Campus Pirutuba - Av. Mutinga, 951 - Jardim Santo Elias - CEP:
+        05110-000 - São Paulo/SP - Contato: (011) 2504-0100
+      </p>
+    </footer>
   </body>
 </html>
