style: :lipstick: Pequenas alterações de estilo

--- a/dwba4-semana-05-PT3025616/index.html
+++ b/dwba4-semana-05-PT3025616/index.html
@@ -22,7 +22,7 @@
       </p>
     </div>
 
-    <img src="./src/images/IFSP_logo.jpg" />
+    <img src="./src/images/IFSP_logo.jpg" alt="Logo do IFSP" />
     <div id="Cursos">
       <h3>Cursos</h3>
       <ul>
