fix: :pencil2: Arrumando referências às imagens

--- a/dwba4-semana-05-PT3025616/src/pages/sobre.html
+++ b/dwba4-semana-05-PT3025616/src/pages/sobre.html
@@ -30,7 +30,7 @@
 
     <footer>
       <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-        <img src="../images/facebook.png" width="50" height="50" />
+        <img src="../images/Facebook.png" width="50" height="50" />
       </a>
 
       <p>
