--- a/dwba4-semana-05-PT3025616/index.html
+++ b/dwba4-semana-05-PT3025616/index.html
@@ -79,7 +79,7 @@
     <br />
 
     <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-      <img src="./src/images/facebook.png" width="50" height="50" />
+      <img src="./src/images/Facebook.png" width="50" height="50" />
     </a>
 
     <footer>
