--- a/dwba4-semana-05-PT3025616/src/pages/entrar.html
+++ b/dwba4-semana-05-PT3025616/src/pages/entrar.html
@@ -47,7 +47,7 @@
 
     <footer>
       <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-        <img src="../images/facebook.png" width="50" height="50" />
+        <img src="../images/Facebook.png" width="50" height="50" />
       </a>
 
       <p>
