fix: :ambulance: Acesso à página de eventos corrigida
Correção do bug do acesso à página de eventos pelo menu superior em todas as páginas

#1

--- a/dwba4-semana-05-PT3025616/src/pages/courses/engProd.html
+++ b/dwba4-semana-05-PT3025616/src/pages/courses/engProd.html
@@ -12,8 +12,8 @@
     <header>
       <div id="Topo" style="position: absolute; top: 0; right: 0">
         <p>
-          <a href="../../../../index.html">HOME</a> |
-          <a href="../eventos.html">EVENTOS</a> |
+          <a href="../../../index.html">HOME</a> |
+          <a href="../eventos/eventos.html">EVENTOS</a> |
           <a href="../contato.html">CONTATO</a> |
           <a href="../sobre.html">SOBRE</a> |
           <a href="../entrar.html">ENTRAR</a>
