--- a/dwba4-semana-05-PT3025616/index.html
+++ b/dwba4-semana-05-PT3025616/index.html
@@ -15,7 +15,7 @@
     <div id="header" style="position: absolute; top: 0; right: 0">
       <p>
         <a href="./index.html">HOME</a> |
-        <a href="./src/pages/eventos.html">EVENTOS</a> |
+        <a href="./src/pages/eventos/eventos.html">EVENTOS</a> |
         <a href="./src/pages/contato.html">CONTATO</a> |
         <a href="./src/pages/sobre.html">SOBRE</a> |
         <a href="./src/pages/entrar.html">ENTRAR</a>
