--- a/dwba4-semana-05-PT3025616/src/pages/courses/ads.html
+++ b/dwba4-semana-05-PT3025616/src/pages/courses/ads.html
@@ -13,7 +13,7 @@
       <div id="Topo" style="position: absolute; top: 0; right: 0">
         <p>
           <a href="../../../../index.html">HOME</a> |
-          <a href="../eventos.html">EVENTOS</a> |
+          <a href="../eventos/eventos.html">EVENTOS</a> |
           <a href="../contato.html">CONTATO</a> |
           <a href="../sobre.html">SOBRE</a> |
           <a href="../entrar.html">ENTRAR</a>
