--- a/dwba4-semana-06-PT3025616/src/pages/courses/engProd.html
+++ b/dwba4-semana-06-PT3025616/src/pages/courses/engProd.html
@@ -4,20 +4,37 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Engenharia de Produção</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    
+    <link href="../../styles/header.css" rel="stylesheet" type="text/css" />
+
     <link rel="icon" href="../../Images/favicon_ifsp.ico" />
   </head>
 
   <body>
     <header>
-      <div id="Topo" style="position: absolute; top: 0; right: 0">
-        <p>
-          <a href="../../../index.html">HOME</a> |
-          <a href="../eventos/eventos.html">EVENTOS</a> |
-          <a href="../contato.html">CONTATO</a> |
-          <a href="../sobre.html">SOBRE</a> |
-          <a href="../entrar.html">ENTRAR</a>
-        </p>
+      <div class="navbar">
+        <a href="../../../index.html">HOME</a>
+        <a href="../eventos/eventos.html">EVENTOS</a>
+        <a href="../contato.html">CONTATO</a>
+        <div class="dropdown">
+          <button class="dropbtn">
+            CURSOS
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="./courses/ads.html"
+              >Análise e Desenvolvimento de Sistemas</a
+            >
+            <a href="./engProd.html">Engenharia de Produção</a>
+          </div>
+        </div>
+        <a href="../entrar.html">ENTRAR</a>
+
+        <a href="../sobre.html" id="sobre">SOBRE</a>
+      </div>
+
+      <div id="div_logo">
+        <img src="../../images/IFSP_logo.jpg" alt="Logo do IFSP" />
       </div>
     </header>
   </body>
