feat: :sparkles: Término do rodapé e das páginas dos cursos

--- a/dwba4-semana-06-PT3025616/src/pages/courses/ads.html
+++ b/dwba4-semana-06-PT3025616/src/pages/courses/ads.html
@@ -4,7 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Análise e Desenvolvimento de Sistemas</title>
-    <link href="../../styles/header.css" rel="stylesheet" type="text/css" />
+
+    <link
+      href="../../styles/commom/header.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <link rel="stylesheet" href="../../styles/courses.css" type="text/css" />
+
+    <link
+      rel="stylesheet"
+      href="../../styles/commom/footer.css"
+      type="text/css"
+    />
+
     <link rel="icon" href="../../images/favicon_ifsp.ico" />
   </head>
 
@@ -37,8 +51,8 @@
     </header>
 
     <h4>Tecnologia em Análise e Desenvolvimento de Sistemas</h4>
+    <p>Objetivo Geral:</p>
     <p>
-      Objetivo Geral:<br />
       O curso de Análise e Desenvolvimento de Sistemas do câmpus São Paulo
       Pirituba tem como objetivo capacitar o egresso a atuar na área de
       Tecnologia de Informação (TI) em atividades como análise, projeto,
@@ -49,5 +63,16 @@
       seja um mediador competente entre o desenvolvimento tecnológico e a
       sociedade em que se insere.
     </p>
+
+    <footer>
+      <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
+        <img src="../../images/facebook.png" width="50" height="50" />
+      </a>
+
+      <p>
+        IFSP - Campus Pirutuba - Av. Mutinga, 951 - Jardim Santo Elias - CEP:
+        05110-000 - São Paulo/SP - Contato: (011) 2504-0100
+      </p>
+    </footer>
   </body>
 </html>
