--- a/dwba4-semana-06-PT3025616/src/pages/courses/engProd.html
+++ b/dwba4-semana-06-PT3025616/src/pages/courses/engProd.html
@@ -4,8 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Engenharia de Produção</title>
-    
-    <link href="../../styles/header.css" rel="stylesheet" type="text/css" />
+
+    <link
+      href="../../styles/commom/header.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <link rel="stylesheet" href="../../styles/courses.css" type="text/css" />
+
+    <link
+      rel="stylesheet"
+      href="../../styles/commom/footer.css"
+      type="text/css"
+    />
 
     <link rel="icon" href="../../Images/favicon_ifsp.ico" />
   </head>
@@ -22,9 +34,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="./courses/ads.html"
-              >Análise e Desenvolvimento de Sistemas</a
-            >
+            <a href="./ads.html">Análise e Desenvolvimento de Sistemas</a>
             <a href="./engProd.html">Engenharia de Produção</a>
           </div>
         </div>
