--- a/dwba4-semana-06-PT3025616/src/pages/entrar.html
+++ b/dwba4-semana-06-PT3025616/src/pages/entrar.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Entrar</title>
 
-    <link rel="stylesheet" href="../styles/header.css" type="text/css">
+    <link rel="stylesheet" href="../styles/commom/header.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/commom/footer.css" type="text/css" />
 
     <link rel="icon" href="../images/favicon_ifsp.ico" />
   </head>
