--- a/dwba4-semana-06-PT3025616/index.html
+++ b/dwba4-semana-06-PT3025616/index.html
@@ -3,10 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Página inicial</title>
+    <title>Página Inicial</title>
 
-    <link rel="stylesheet" href="./src/styles/header.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="./src/styles/commom/header.css"
+      type="text/css"
+    />
     <link rel="stylesheet" href="./src/styles/body.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="./src/styles/commom/footer.css"
+      type="text/css"
+    />
 
     <link
       rel="shortcut icon"
