fix: :ambulance: Correção de nome de fotos

--- a/dwba4-semana-06-PT3025616/index.html
+++ b/dwba4-semana-06-PT3025616/index.html
@@ -48,14 +48,14 @@
         <a href="./src/pages/sobre.html" id="sobre">SOBRE</a>
       </div>
 
-      <div id="div_logo">
+      <div>
         <img src="./src/images/IFSP_logo.jpg" alt="Logo do IFSP" />
       </div>
     </header>
 
     <div>
       <h3>Acontece no IFSP!</h3>
-      <img src="./src/images/Seja_Raro.jpg" width="500" />
+      <img src="./src/images/SEJA_RARO.jpg" width="500" />
       <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
     </div>
 
