--- a/dwba4-semana-06-PT3025616/src/pages/eventos/eventos.html
+++ b/dwba4-semana-06-PT3025616/src/pages/eventos/eventos.html
@@ -139,7 +139,7 @@
     <br />
 
     <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-      <img src="../../images/Facebook.png" width="50" height="50" />
+      <img src="../../images/facebook.png" width="50" height="50" />
     </a>
 
     <footer>
