feat: :sparkles: Página inicial concluída

--- a/dwba4-semana-06-PT3025616/index.html
+++ b/dwba4-semana-06-PT3025616/index.html
@@ -56,6 +56,9 @@
     <div>
       <h3>Acontece no IFSP!</h3>
       <img src="./src/images/SEJA_RARO.jpg" width="500" />
+    </div>
+
+    <div id="paragrafo">
       <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
     </div>
 
