--- a/dwba4-semana-06-PT3025616/src/pages/eventos/eventos.html
+++ b/dwba4-semana-06-PT3025616/src/pages/eventos/eventos.html
@@ -10,6 +10,13 @@
       href="../../styles/commom/header.css"
       type="text/css"
     />
+
+    <link
+      rel="stylesheet"
+      href="../../styles/pages/eventos.css"
+      type="text/css"
+    />
+
     <link
       rel="stylesheet"
       href="../../styles/commom/footer.css"
@@ -52,13 +59,16 @@
 
     <form id="formulario_eventos">
       <fieldset>
-        <label for="evento">Evento</label>
+        <label for="evento">Evento</label> <br />
         <select name="estado">
           <option value="selecione">-- Selecione --</option>
           <option value="voe_sem_asas">Voe sem asas</option>
           <option value="festa_junina">Festa junina</option>
           <option value="semana_tecnologia">Semana da tecnologia</option>
         </select>
+
+        <br />
+        <br />
       </fieldset>
 
       <fieldset>
@@ -85,23 +95,24 @@
 
       <fieldset>
         <legend>Informações Pessoais</legend>
+        <br />
 
         <label for="nome">Nome completo</label>
         <input type="text" name="nome" id="nome" /> <br />
         <br />
 
-        <label for="email">E-mail</label>
+        <label for="email">E-mail</label> <br />
         <input type="text" name="email" id="email" /> <br />
         <br />
 
-        <label for="celular">Celular</label>
+        <label for="celular">Celular (99) 99999-9999</label> <br />
         <input
           type="text"
           name="celular"
           id="celular"
           pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"
         />
-        (99) 99999-9999
+
         <br />
         <br />
 
@@ -124,7 +135,7 @@
         <input type="color" name="cor_favorita" id="cor_favorita" /> <br />
         <br />
 
-        <label for="perfil_github">Perfil no Github</label>
+        <label for="perfil_github">Perfil no Github</label> <br />
         <input type="url" name="perfil_github" id="perfil_github" />
 
         <br /><br />
@@ -132,17 +143,18 @@
 
       <br />
 
-      <input type="submit" value="Inscrever" />
+      <input type="submit" value="Inscrever-se" /> <br />
+      <br />
       <button type="button" onclick="limparFormulario()">Limpar</button>
     </form>
 
     <br />
 
-    <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
-      <img src="../../images/facebook.png" width="50" height="50" />
-    </a>
-
     <footer>
+      <a href="https://www.facebook.com/ifsppirituba/?locale=pt_BR">
+        <img src="../../images/facebook.png" width="50" height="50" />
+      </a>
+
       <p>
         IFSP - Campus Pirutuba - Av. Mutinga, 951 - Jardim Santo Elias - CEP:
         05110-000 - São Paulo/SP - Contato: (011) 2504-0100
