--- a/dwba4-semana-06-PT3025616/src/pages/courses/engProd.html
+++ b/dwba4-semana-06-PT3025616/src/pages/courses/engProd.html
@@ -11,7 +11,11 @@
       type="text/css"
     />
 
-    <link rel="stylesheet" href="../../styles/courses.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="../../styles/pages/courses.css"
+      type="text/css"
+    />
 
     <link
       rel="stylesheet"
