--- a/menu/index.html
+++ b/menu/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
-      rel="shortcut icon"
+      id="dynamic-favicon"
+      rel="icon"
       href="./images/tumblr_lqwdpnsIGo1qcfn0j540.gif"
-      type="image/x-icon"
+      type="image/gif"
     />
 
     <link rel="stylesheet" href="./style.css" type="text/css" />
