feat: :lipstick: Cor da letra
Cor da letra mudada e caminhos dos diretórios voltando a funcionar

--- a/menu/index.html
+++ b/menu/index.html
@@ -19,32 +19,32 @@
     <h1 class="noselect">Atividades Semanais:</h1>
 
     <div class="grid-container noselect">
-      <a class="grid-item noselect" href="./dwba4-semana-01/index.html"
+      <a class="grid-item noselect" href="../dwba4-semana-01/index.html"
         >Semana 1</a
       >
       <a
         class="grid-item noselect"
-        href="./dwba4-semana-03-PT3025616/index.html"
+        href="../dwba4-semana-03-PT3025616/index.html"
         >Semana 3</a
       >
       <a
         class="grid-item noselect"
-        href="./dwba4-semana-04-PT3025616/index.html"
+        href="../dwba4-semana-04-PT3025616/index.html"
         >Semana 4</a
       >
       <a
         class="grid-item noselect"
-        href="./dwba4-semana-05-PT3025616/index.html"
+        href="../dwba4-semana-05-PT3025616/index.html"
         >Semana 5</a
       >
       <a
         class="grid-item noselect"
-        href="./dwba4-semana-06-PT3025616/index.html"
+        href="../dwba4-semana-06-PT3025616/index.html"
         >Semana 6</a
       >
       <a
         class="grid-item noselect"
-        href="./dwba4-semana-07-PT3025616/index.html"
+        href="../dwba4-semana-07-PT3025616/index.html"
         >Semana 7</a
       >
     </div>
