feat: :lipstick: Inserção da semana 08 no menu

--- a/menu/index.html
+++ b/menu/index.html
@@ -47,6 +47,11 @@
         href="../dwba4-semana-07-PT3025616/index.html"
         >Semana 7</a
       >
+      <a
+        class="grid-item noselect"
+        href="../dwba4-semana-08-PT3025616/index.html"
+        >Semana 8</a
+      >
     </div>
     <script src="./script.js" defer></script>
   </body>
