style: :lipstick: Inserção do link de volta ao menu

--- a/dwba4-semana-08-PT3025616/questao4/questao_04.html
+++ b/dwba4-semana-08-PT3025616/questao4/questao_04.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Dados dos Alunos</h1>
+    <a href="../index.html">voltar</a>
     <script src="./js/questao_04.js"></script>
   </body>
 </html>
