--- a/dwba4-semana-08-PT3025616/questao2/questao_02.html
+++ b/dwba4-semana-08-PT3025616/questao2/questao_02.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Questão 02</h1>
+    <a href="../index.html">voltar</a>
     <script type="text/javascript" src="./js/questao_02.js" defer></script>
   </body>
 </html>
