--- a/dwba4-semana-08-PT3025616/questao3/questao_03.html
+++ b/dwba4-semana-08-PT3025616/questao3/questao_03.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Resultados dos Alunos</h1>
+    <a href="../index.html">voltar</a>
     <script src="./js/questao_03.js" defer></script>
   </body>
 </html>
