fix: :ambulance: Ajustando grid e implementando a margem

--- a/dwba4-semana-09-PT3025616/index.html
+++ b/dwba4-semana-09-PT3025616/index.html
@@ -57,25 +57,25 @@
     <div class="slideshow-container">
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
-        <div class="numbertext">1 / 4</div>
+        <div class="numbertext"></div>
         <img src="./src/images/A.png" style="width: 100%" />
-        <div class="text">Caption Text</div>
+        <div class="text"></div>
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">2 / 4</div>
+        <div class="numbertext"></div>
         <img src="./src/images/B.jpg" style="width: 100%" />
-        <div class="text">Caption Two</div>
+        <div class="text"></div>
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">3 / 4</div>
+        <div class="numbertext"></div>
         <img src="./src/images/C.jpg" style="width: 100%" />
-        <div class="text">Caption Three</div>
+        <div class="text"></div>
       </div>
 
       <div class="mySlides fade">
-        <div class="numbertext">4 / 4</div>
+        <div class="numbertext"></div>
 
         <h3>Conheça os desafios de inovação</h3>
 
@@ -89,7 +89,7 @@
           referrerpolicy="strict-origin-when-cross-origin"
           allowfullscreen
         ></iframe>
-        <div class="text">Caption Four</div>
+        <div class="text"></div>
       </div>
 
       <!-- Next and previous buttons -->
