--- a/menu/index.html
+++ b/menu/index.html
@@ -52,6 +52,10 @@
         href="../dwba4-semana-08-PT3025616/index.html"
         >Semana 8</a
       >
+      <a class="grid-item noselect"
+      href="../dwba4-semana-09-PT3025616/index.html"
+      >Semana 9</a
+      >
     </div>
     <script src="./script.js" defer></script>
   </body>
