feat: :sparkles: Criação da tarefa da semana 10 e inserção no menu das semanas

--- a/menu/index.html
+++ b/menu/index.html
@@ -52,9 +52,15 @@
         href="../dwba4-semana-08-PT3025616/index.html"
         >Semana 8</a
       >
-      <a class="grid-item noselect"
-      href="../dwba4-semana-09-PT3025616/index.html"
-      >Semana 9</a
+      <a
+        class="grid-item noselect"
+        href="../dwba4-semana-09-PT3025616/index.html"
+        >Semana 9</a
+      >
+      <a
+        class="grid-item noselect"
+        href="../dwba4-semana-10-PT3025616/index.html"
+        >Semana 10</a
       >
     </div>
     <script src="./script.js" defer></script>
