--- a/dwba4-semana-10-PT3025616/src/pages/entrar.html
+++ b/dwba4-semana-10-PT3025616/src/pages/entrar.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Entrar</title>
+
+    <!-- Configuração do css do Bootstrap -->
+
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudfare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="../styles/commom/header.css" type="text/css" />
     <link rel="stylesheet" href="../styles/pages/entrar.css" type="text/css" />
@@ -13,16 +24,16 @@
   </head>
   <body>
     <header>
-      <div class="navbar">
+      <div class="barraNavegacao">
         <a href="../../index.html">HOME</a>
         <a href="./eventos/eventos.html">EVENTOS</a>
         <a href="./contato.html">CONTATO</a>
-        <div class="dropdown">
-          <button class="dropbtn">
+        <div class="suspenso">
+          <button class="botao">
             CURSOS
             <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropdown-content">
+          <div class="suspenso-conteudo">
             <a href="./courses/ads.html"
               >Análise e Desenvolvimento de Sistemas</a
             >
@@ -41,7 +52,9 @@
 
     <br /><br />
 
-    <h1>Entrar</h1>
+    <img src="../images/ifsp.png" alt="ícone do IFSP" />
+
+    <h1>Faça Login</h1>
 
     <br />
 
